--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,3 +1,9 @@
 .margin-right-small {
   margin-right: 3rem;
 }
+.margin-bottom-large {
+  margin-bottom: 10rem;
+}
+.center-text {
+  text-align: center;
+}
