--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,6 +5,10 @@
   @include respond(phone) {
     font-size: 2.8rem;
   }
+
+  &--white {
+    color: $color-white;
+  }
 }
 
 .heading-tertiary {
@@ -23,4 +27,8 @@
   margin-top: 2rem;
   margin-bottom: 5.5rem;
   line-height: 3rem;
+
+  &--white {
+    color: rgba($color-white,0.7);
+  }
 }
