--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,5 +13,6 @@
 @import "layout/header";
 @import "layout/navbar";
 @import "layout/mobile_nav";
+@import "layout/footer";
 
 @import "pages/home";
